# finance-tracker-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  main.py  pyproject.toml
app/: database.py  dependency.py  enum.py  models.py  schemas.py
app/api/v1/: interest.py  operations.py  users.py  wallets.py
app/repository/: operations.py  users.py  wallets.py
app/service/: exchange_service.py  interest.py  operations.py  users.py  wallets.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
migrations/: env.py
migrations/versions/: 2c80d269c7e0_added_column_new_balance_to_operation_.py  3a1622990d3f_initial_migration_added_hashed_.py  59e809ad05d7_baseline.py  8cf027e9b4e0_initial_schema.py
tests/: conftest.py
tests/test_api/: test_interest.py  test_operations.py  test_users.py  test_wallets.py
