[project]
name = "another-fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
